kubernetes/kustomize/dependency-track/base/trivy-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: trivy
spec:
  serviceName: trivy
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: trivy
  template:
    metadata:
      labels:
        app.kubernetes.io/component: trivy
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: trivy
          image: aquasec/trivy:latest
          args:
            - server
            - --listen
            - :8080
            - --token
            - $(TRIVY_TOKEN)
            - --cache-dir
            - /var/trivy-cache
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: trivy-cache
              mountPath: /var/trivy-cache
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: trivy-cache
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
