kubernetes/kustomize/dependency-track/base/trivy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trivy
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/component: trivy
