kubernetes/kustomize/dependency-track/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dependencytrack
spec:
  rules:
    - host: dependencytrack
      http:
        paths:
          - backend:
              service:
                name: dependencytrack-api
                port:
                  number: 8080
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: dependencytrack-frontend
                port:
                  number: 8080
            path: /
            pathType: Prefix
